--- a/tanahora/templates/index.html
+++ b/tanahora/templates/index.html
@@ -75,6 +75,27 @@
             <a data-anchor="product" href="cadastro"> Cadastra-se </a>
           </button>
         </div>
+        <div class="caixa-maior">
+
+          <input class="input-cidade" placeholder="Digite o nome da cidade.">
+          <button onclick= "cliqueiNoBotao()">
+              <img class="lupa" src="https://www.svgrepo.com/show/488200/find.svg">
+          </button>
+  
+          <div class="caixa-media">
+              <h2 class="cidade">Tempo em São Paulo </h2>
+              <p class="temp"> 28°C </p>
+              <p class="max-min">Max.: 29°C / Min.: 19°C </p>
+  
+              <div class="caixa-menor">
+                  <p class="texto-previsao">Ensolarado</p>
+                  <img class="icone" src="https://openweathermap.org/img/wn/04n.png">
+              </div>
+  
+              <p class="umidade">Umidade: 70% - Vento: 8km/h </p>
+  
+          </div>
+        </div>
         <div class="img-home">
           <img src="/static/img/familia2.jpg" alt="" />
         </div>
@@ -90,5 +111,6 @@
         </div>
       </footer>
     </div>
+    <script src="./javascri.js"></script>
   </body>
 </html>
