--- a/tanahora/templates/home-responsavel.html
+++ b/tanahora/templates/home-responsavel.html
@@ -49,6 +49,28 @@
                     <img  src="./static/img/familia 2.jpg" alt="">
                 </div> 
             </div>
+
+            <div class="caixa-maior">
+
+                <input class="input-cidade" placeholder="Digite o nome da cidade.">
+                <button onclick= "cliqueiNoBotao()">
+                    <img class="lupa" src="https://www.svgrepo.com/show/488200/find.svg">
+                </button>
+        
+                <div class="caixa-media">
+                    <h2 class="cidade">Tempo em São Paulo </h2>
+                    <p class="temp"> 28°C </p>
+                    <p class="max-min">Max.: 29°C / Min.: 19°C </p>
+        
+                    <div class="caixa-menor">
+                        <p class="texto-previsao">Ensolarado</p>
+                        <img class="icone" src="https://openweathermap.org/img/wn/04n.png">
+                    </div>
+        
+                    <p class="umidade">Umidade: 70% - Vento: 8km/h </p>
+        
+                </div>
+            </div>
             <footer>
                 <div class="final">
                     <p> &copy;Projeto Integrador em Computação II </p>
@@ -56,5 +78,6 @@
                 </div>
             </footer>  
         </div>   
+        <script src="./javascri.js"></script>
     </body>
 </html>
