atualização-do-css
- Arrumei a pagina home , ajustei o css da previsão do tempo.

- add na pagina hoje tabela de lembre de tarefas da semana.

- comecei arrumar o calendario para add tarefas.

--- a/tanahora/templates/calendario.html
+++ b/tanahora/templates/calendario.html
@@ -73,8 +73,8 @@
       <main id="pag-calendario">
         <section id="calendario-mes">
           <div id="botoes">
-            <button id="anterior">< Anterior</button>
-            <h1>Novembro de 2024</h1>
+            <button id="anterior"> < Anterior</button>
+            <h1> Maio de 2025</h1>
             <button id="proximo">Proximo ></button>
           </div>
           <div id="calendario">
@@ -97,45 +97,46 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
-                    <td id="hover">1</td>
-                    <td id="feriado hover">2</td>
+                    <td id="hover" class="back-feriado" onclick= "adicionarTarefa()">1</td>
+                    <td id="hover" onclick= "adicionarTarefa()">2</td>
+                    <td id="hover" onclick= "adicionarTarefa()">3</td>
                   </tr>
                   <tr>
-                    <td id="hover">3</td>
-                    <td id="hover">4</td>
-                    <td id="hover">5</td>
-                    <td id="hover">6</td>
-                    <td id="hover">7</td>
-                    <td id="hover">8</td>
-                    <td id="hover">9</td>
+                    <td id="hover" onclick= "adicionarTarefa()">4</td>
+                    <td id="hover" onclick= "adicionarTarefa()">5</td>
+                    <td id="hover" onclick= "adicionarTarefa()">6</td>
+                    <td id="hover" onclick= "adicionarTarefa()">7</td>
+                    <td id="hover" onclick= "adicionarTarefa()">8</td>
+                    <td id="hover" onclick= "adicionarTarefa()">9</td>
+                    <td id="hover" onclick= "adicionarTarefa()">10</td>
                   </tr>
                   <tr>
-                    <td id="hover">10</td>
-                    <td id="hover">11</td>
-                    <td id="hover">12</td>
-                    <td id="hover">13</td>
-                    <td id="hover">14</td>
-                    <td id="feriado hover">15</td>
-                    <td>16</td>
+                    <td id="hover" onclick= "adicionarTarefa()">11</td>
+                    <td id="hover" onclick= "adicionarTarefa()">12</td>
+                    <td id="hover" onclick= "adicionarTarefa()">13</td>
+                    <td id="hover" onclick= "adicionarTarefa()">14</td>
+                    <td id="hover" onclick= "adicionarTarefa()">15</td>
+                    <td id="hover" onclick= "adicionarTarefa()">16</td>
+                    <td id="hover" onclick= "adicionarTarefa()">17</td>
+                    
                   </tr>
                   <tr>
-                    <td id="hover">17</td>
-                    <td id="hover">18</td>
-                    <td id="hover">19</td>
-                    <td id="feriado hover">20</td>
-                    <td id="hover">21</td>
-                    <td id="hover">22</td>
-                    <td id="hover">23</td>
+                    <td id="hover" onclick= "adicionarTarefa()">18</td>
+                    <td id="hover" onclick= "adicionarTarefa()">19</td>
+                    <td id="hover" onclick= "adicionarTarefa()">20</td>
+                    <td id="hover" onclick= "adicionarTarefa()">21</td>
+                    <td id="hover" onclick= "adicionarTarefa()">22</td>
+                    <td id="hover" onclick= "adicionarTarefa()">23</td>
+                    <td id="hover" onclick= "adicionarTarefa()">24</td>
                   </tr>
                   <tr>
-                    <td id="hover">24</td>
-                    <td id="hover">25</td>
-                    <td id="hover">26</td>
-                    <td id="hover">27</td>
-                    <td id="hover">28</td>
-                    <td id="hover">29</td>
-                    <td id="hover">30</td>
+                    <td id="hover" onclick= "adicionarTarefa()">25</td>
+                    <td id="hover" onclick= "adicionarTarefa()">26</td>
+                    <td id="hover" onclick= "adicionarTarefa()">27</td>
+                    <td id="hover" onclick= "adicionarTarefa()">28</td>
+                    <td id="hover" onclick= "adicionarTarefa()">29</td>
+                    <td id="hover" onclick= "adicionarTarefa()">30</td>
+                    <td id="hover" onclick= "adicionarTarefa()">31</td>
                   </tr>
                 </tbory>
               </table>
@@ -149,7 +150,7 @@
         </section>
         <section id="calendario-mensal">
           <div id="outubro">
-            <h2>Outubro 2024</h2>
+            <h2>Abril 2025</h2>
             <table>
               <thead>
                 <tr>
@@ -166,45 +167,44 @@
                 <tr>
                   <td></td>
                   <td></td>
-                  <td id="hover">1</td>
-                  <td id="hover">2</td>
-                  <td id="hover">3</td>
-                  <td id="hover">4</td>
-                  <td id="hover">5</td>
+                  <td id="hover" onclick= "adicionarTarefa()">1</td>
+                  <td id="hover" onclick= "adicionarTarefa()">2</td>
+                  <td id="hover" onclick= "adicionarTarefa()">3</td>
+                  <td id="hover" onclick= "adicionarTarefa()">4</td>
+                  <td id="hover" onclick= "adicionarTarefa()">5</td>
                 </tr>
                 <tr>
-                  <td id="hover">6</td>
-                  <td id="hover">7</td>
-                  <td id="hover">8</td>
-                  <td id="hover">9</td>
-                  <td id="hover">10</td>
-                  <td id="hover">11</td>
-                  <td id="feriado">12</td>
+                  <td id="hover" onclick= "adicionarTarefa()">6</td>
+                  <td id="hover" onclick= "adicionarTarefa()">7</td>
+                  <td id="hover" onclick= "adicionarTarefa()">8</td>
+                  <td id="hover" onclick= "adicionarTarefa()">9</td>
+                  <td id="hover" onclick= "adicionarTarefa()">10</td>
+                  <td id="hover" onclick= "adicionarTarefa()">11</td>
+                  <td id="hover" onclick= "adicionarTarefa()">12</td>
+                </tr> 
+                <tr>
+                  <td id="hover" onclick= "adicionarTarefa()">13</td>
+                  <td id="hover" onclick= "adicionarTarefa()">14</td>
+                  <td id="hover" onclick= "adicionarTarefa()">15</td>
+                  <td id="hover" onclick= "adicionarTarefa()">16</td>
+                  <td id="hover" onclick= "adicionarTarefa()">17</td>
+                  <td id="feriado" onclick= "adicionarTarefa()">18</td>
+                  <td id="hover" onclick= "adicionarTarefa()">19</td>
                 </tr>
                 <tr>
-                  <td id="hover">13</td>
-                  <td id="hover">14</td>
-                  <td id="feriado">15</td>
-                  <td id="hover">16</td>
-                  <td id="hover">17</td>
-                  <td id="hover">18</td>
-                  <td id="hover">19</td>
+                  <td id="feriado" onclick= "adicionarTarefa()">20</td>
+                  <td id="feriado" onclick= "adicionarTarefa()">21</td>
+                  <td id="hover" onclick= "adicionarTarefa()">22</td>
+                  <td id="hover" onclick= "adicionarTarefa()">23</td>
+                  <td id="hover" onclick= "adicionarTarefa()">24</td>
+                  <td id="hover" onclick= "adicionarTarefa()">25</td>
+                  <td id="hover" onclick= "adicionarTarefa()">26</td>
                 </tr>
                 <tr>
-                  <td id="hover">20</td>
-                  <td id="hover">21</td>
-                  <td id="hover">22</td>
-                  <td id="hover">23</td>
-                  <td id="hover">24</td>
-                  <td id="hover">25</td>
-                  <td id="hover">26</td>
-                </tr>
-                <tr>
-                  <td id="hover">27</td>
-                  <td id="feriado">28</td>
-                  <td id="hover">29</td>
-                  <td id="hover">30</td>
-                  <td id="hover">31</td>
+                  <td id="hover" onclick= "adicionarTarefa()">27</td>
+                  <td id="hover" onclick= "adicionarTarefa()" >28</td>
+                  <td id="hover" onclick= "adicionarTarefa()">29</td>
+                  <td id="hover" onclick= "adicionarTarefa()">30</td>
                   <td></td>
                   <td></td>
                 </tr>
@@ -212,7 +212,7 @@
             </table>
           </div>
           <div id="novembro">
-            <h2>Novembro 2024</h2>
+            <h2>Maio 2025</h2>
             <table>
               <thead>
                 <tr>
@@ -231,51 +231,53 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
-                  <td id="hover">1</td>
-                  <td id="feriado hover">2</td>
+                  <td id="feriado" onclick= "adicionarTarefa()">1</td>
+                  <td id="hover" onclick= "adicionarTarefa()">2</td>
+                  <td id="hover" onclick= "adicionarTarefa()">3</td>
                 </tr>
                 <tr>
-                  <td id="hover">3</td>
-                  <td id="hover">4</td>
-                  <td id="hover">5</td>
-                  <td id="hover">6</td>
-                  <td id="hover">7</td>
-                  <td id="hover">8</td>
-                  <td id="hover">9</td>
+                  <td id="hover" onclick= "adicionarTarefa()">4</td>
+                  <td id="hover" onclick= "adicionarTarefa()">5</td>
+                  <td id="hover" onclick= "adicionarTarefa()">6</td>
+                  <td id="hover" onclick= "adicionarTarefa()">7</td>
+                  <td id="hover" onclick= "adicionarTarefa()">8</td>
+                  <td id="hover" onclick= "adicionarTarefa()">9</td>
+                  <td id="hover" onclick= "adicionarTarefa()">10</td>
                 </tr>
                 <tr>
-                  <td id="hover">10</td>
-                  <td id="hover">11</td>
-                  <td id="hover">12</td>
-                  <td id="hover">13</td>
-                  <td id="hover">14</td>
-                  <td id="feriado">15</td>
-                  <td id="hover">16</td>
+                  <td id="hover" onclick= "adicionarTarefa()">11</td>
+                  <td id="hover" onclick= "adicionarTarefa()">12</td>
+                  <td id="hover" onclick= "adicionarTarefa()">13</td>
+                  <td id="hover" onclick= "adicionarTarefa()">14</td>
+                  <td id="hover" onclick= "adicionarTarefa()">15</td>
+                  <td id="hover" onclick= "adicionarTarefa()">16</td>
+                  <td id="hover" onclick= "adicionarTarefa()">17</td>
                 </tr>
                 <tr>
-                  <td id="hover">17</td>
-                  <td id="hover">18</td>
-                  <td id="hover">19</td>
-                  <td id="feriado">20</td>
-                  <td id="hover">21</td>
-                  <td id="hover">22</td>
-                  <td id="hover">23</td>
+                  <td id="hover" onclick= "adicionarTarefa()">18</td>
+                  <td id="hover" onclick= "adicionarTarefa()">19</td>
+                  <td id="hover" onclick= "adicionarTarefa()">20</td>
+                  <td id="hover" onclick= "adicionarTarefa()">21</td>
+                  <td id="hover" onclick= "adicionarTarefa()">22</td>
+                  <td id="hover" onclick= "adicionarTarefa()">23</td>
+                  <td id="hover" onclick= "adicionarTarefa()">24</td>
                 </tr>
                 <tr>
-                  <td id="hover">24</td>
-                  <td id="hover">25</td>
-                  <td id="hover">26</td>
-                  <td id="hover">27</td>
-                  <td id="hover">28</td>
-                  <td id="hover">29</td>
-                  <td id="hover">30</td>
+                  <td id="hover">
+                   <button onclick= "adicionarTarefa()">   25 </button>
+                  </td>
+                  <td id="hover" onclick= "adicionarTarefa()">26</td>
+                  <td id="hover" onclick= "adicionarTarefa()">27</td>
+                  <td id="hover" onclick= "adicionarTarefa()">28</td>
+                  <td id="hover" onclick= "adicionarTarefa()">29</td>
+                  <td id="hover" onclick= "adicionarTarefa()">30</td>
+                  <td id="hover" onclick= "adicionarTarefa()">31</td>
                 </tr>
               </tbory>
             </table>
           </div>
           <div id="dezembro">
-            <h2>Dezembro 2024</h2>
+            <h2>Junho 2025</h2>
             <table>
               <thead>
                 <tr>
@@ -303,7 +305,7 @@
                   <td id="hover">9</td>
                   <td id="hover">10</td>
                   <td id="hover">11</td>
-                  <td id="hover">12</td>
+                  <td id="feriado">12</td>
                   <td id="hover">13</td>
                   <td id="hover">14</td>
                 </tr>
@@ -312,7 +314,7 @@
                   <td id="hover">16</td>
                   <td id="hover">17</td>
                   <td id="hover">18</td>
-                  <td id="hover">19</td>
+                  <td id="feriado">19</td>
                   <td id="hover">20</td>
                   <td id="hover">21</td>
                 </tr>
@@ -320,7 +322,7 @@
                   <td id="hover">22</td>
                   <td id="hover">23</td>
                   <td id="hover">24</td>
-                  <td id="feriado">25</td>
+                  <td id="hover">25</td>
                   <td id="hover">26</td>
                   <td id="hover">27</td>
                   <td id="hover">28</td>
@@ -328,7 +330,6 @@
                 <tr>
                   <td id="hover">29</td>
                   <td id="hover">30</td>
-                  <td id="hover">31</td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -384,5 +385,6 @@
         </div>
       </footer>
     </div>
+    <script src="./javascri.js"></script>
   </body>
 </html>
