--- a/tanahora/templates/home-dependente.html
+++ b/tanahora/templates/home-dependente.html
@@ -58,8 +58,8 @@
           </ul>
         </nav>
       </header>
-      <div class="corpo">
-        <div class="texto-index">
+      <div class="corpo-inicio">
+        <div class="texto-inicio">
           <h1>Tá na Hora ...</h1>
           <p>
             Olá {{usuario.nickname}}, filho de {{usuario.responsavel.nickname}}
