--- a/tanahora/static/style.css
+++ b/tanahora/static/style.css
@@ -88,9 +88,22 @@ li.botao a {
    height: 50vh;
 }
 
+.corpo-inicio {
+   margin: 35px;
+   display: flex;
+}
+
 .texto-home {
    background-image: linear-gradient(rgba(59, 161, 205, .3), rgb(250, 106, 178, .3));
    border-radius: 10px;
+}
+
+.texto-inicio {
+   padding: 50px;
+}
+.texto-inicio .nome-usuario {
+   font-size: 30px;
+   font-family: 'Times New Roman';
 }
 
 .texto-home h1 {
@@ -125,6 +138,10 @@ strong {
 .img-home img {
    width: 350px;
    border-radius: 40%;
+}
+
+.img-inicio  img{
+   height: 350px;
 }
 
 footer {
@@ -922,98 +939,150 @@ tr td {
    border-radius: 20px;
 }
 
+.back-feriado {
+   background-color: #dbe3fd;
+}
 #hover:hover {
    /* Estilos quando o mouse passa por cima */
-   transform: scale(1.5);
+   transform: scale(1.3);
    /* Aumenta em 10% */
-   background-color: #6f7fc5;
+   background-color: #c4cdf6;
 }
 
-
+.lembretes-inicio {
+   display: flex;
+}
 
 
 /* previsao do tempo */
 
 
 .caixa-maior {
-   background-color: #000000;
+   margin: 20px 80px;
+   background-color: #dbb0dc;
    width: 95%; 
-   max-width: 420px; 
+   max-width: 320px; 
    opacity: 0.8;
-   padding: 20px;
+   padding: 18px;
    border-radius: 25px;
 }
 
-input .input-cidade {
+.caixa-maior .input-cidade {
    border: none;/* borda do elemento */
    outline: none;/* borda quando seleciona o elemento */
-   padding: 10px;/* espaçamento interno */
+   padding: 8px;/* espaçamento interno */
    border-radius: 24px;/* arredonda as bordas */
-   font-size: 20px;
+   font-size: 15px;
    background-color: #7c7c7c2b;
    color: #ffffff;
-   width: calc( 100% - 50px);
+   width: calc( 100% - 40px);
 }
 
-button .lupa-button {
+.caixa-maior button {
    border: none;
    outline: none;
-   padding: 10px;
+   padding: 8px;
    border-radius: 50px;
    background-color: #7c7c7c2b;
    float: right;
    cursor: pointer;
 }
 
-button:hover {
-   background-color: #7c7c7c6b;
+button:hover, .input-cidade:hover {
+   background-color: #ffffff6b;
 }
 
 .caixa-media {
-   margin-top: 30px;
-   
+   margin-top: 8px;   
 }
 
 .caixa-menor {
    display: flex;
    align-items: center;
-   margin-left: 30%;
-   font-size: 20px;
+   margin-left: 45%;
+   font-size: 15px;
 }
 
 .caixa-menor img {
-   height: 100px;
-   width: 100px;
+   height: 50px;
+   width: 80px;
    float: right;
 }
 
 .lupa {
-   height: 20px;
+   height: 15px;
 }
 
-h2 .cidade{
-   font-size: 28px; /* tamanho do texto */
+.cidade{
+   font-size: 20px; /* tamanho do texto */
    font-weight: 400;
 }
 
 .temp {
-   margin-top: 5px;
-   font-size: 20px;
+   font-size: 22px;
 }
 
 .texto-previsao {
-   margin-left: 50px;
+   margin-left: 15px;
    text-transform: capitalize; /* Deixa a primeira letra maiuscula*/
 }
 
 
 .max-min {
-   font-size: 14px;
+   font-size: 12px;
    opacity: 0.5;
 }
 
 
 .umidade, .quali {
-   font-size: 18px;
+   font-size: 12px;
    opacity: 0.5;
+}
+ 
+
+/******esta semana ***/
+
+.lembrete-calendario {
+   border-radius:5%;
+   color: #45474B;
+   background-color: #e5ebfd;
+   margin:  10px 30px;
+   padding: 0px 20px;
+   font-size: 13px;
+}
+.lembrete-calendario .title-inicio {
+   font-weight: 400;
+}
+.lembrete-calendario .inicio-calen  {
+   font-size: 18px;
+}
+
+.tarefas-inicio table {
+   border-collapse: collapse;
+}
+
+.tarefas-inicio th, td {
+   border: 1px solid black;
+   padding: 0px;
+   margin: 0px;
+  
+}
+
+.tarefas-inicio td {
+   height: 50px;
+   padding: 0px;
+   margin: 0px;
+   width: 80px;
+}
+
+.tarefas-inicio th {
+   background-color: #cbd6fa;
+   text-align: center;
+  
+}
+
+.tarefas-inicio ul {
+
+   text-align: left;
+
 }
