ajuste script previsao

--- a/tanahora/templates/home-responsavel.html
+++ b/tanahora/templates/home-responsavel.html
@@ -16,7 +16,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/static/style.css">
-        <script defer src="./javascri.js"></script>
     </head>
     <body>
         <div class="fundo">
@@ -54,6 +53,7 @@
                 <div class="caixa-maior">
                     <input class="input-cidade" placeholder="Digite o nome da cidade.">
                     <button onclick= "cliqueiNoBotao()">
+                        <script src="/static/javascri.js"></script>
                         <img class="lupa" src="https://www.svgrepo.com/show/488200/find.svg">
                     </button>            
                     <div class="caixa-media">
@@ -204,6 +204,5 @@
                 </div>
             </footer>  
         </div>   
-        <script src="./javascri.js"></script>
     </body>
 </html>
